# whitematter

./: .gitignore  Makefile  README.md  cifar10.h  cnn_cifar10  cnn_cifar10.cpp  cnn_mnist.cpp  layer.cpp  layer.h  loss.cpp  loss.h  ml  ml.cpp  mnist_cnn.onnx  optimizer.cpp  optimizer.h  requirements.txt  serialize.cpp  server.py  setup.py  tensor.cpp  tensor.h  test_dataloader.cpp  whitematter_py.cpp
.beads/: issues.jsonl
codegen/: __init__.py  compiler.py  generator.py
core/: amp.h  dataloader.cpp  dataloader.h  layer.cpp  layer.h  logging.h  loss.cpp  loss.h  model_zoo.cpp  model_zoo.h  onnx_export.cpp  onnx_export.h  optimizer.h  serialize.h  tensor.cpp  tensor.h
datasets/: cifar10.cpp  mnist.cpp  mnist.h
examples/: autoencoder.cpp  cnn_cifar10.cpp  cnn_mnist.cpp  gan.cpp  rnn_text_gen.cpp  test_amp.cpp  test_early_stopping.cpp  test_grad_accum.cpp  test_logging.cpp  test_model_summary.cpp  train_zoo_model.cpp  transformer_example.cpp
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  api.ts  (+1 more)
models/: default01.json  mnist01.json
platform/: dataset_manager.py  pyproject.toml  server.py  server_v2.py
platform/codegen/: generator.py
platform/inference/: Makefile  infer.cpp
platform/llm/: __init__.py  prompts.py  service.py
platform/models/: 5f8d1258.json  84ddb00f.json  9e29650d.json  c759b5ef.json
platform/preprocessing/: image_processor.py
tests/: run_tests.cpp  test_autograd.cpp  test_framework.h  test_layers.cpp  test_loss.cpp  test_optimizer.cpp  test_tensor.cpp
whitematter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+9 files in other folders)
