[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "whitematter"
version = "0.1.0"
description = "Whitematter ML inference module"
requires-python = ">=3.8"
dependencies = [
    "pybind11>=2.10",
]

[tool.setuptools]
py-modules = []
packages = []
